--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
         <a href="../UI_UX_HW_19/workpage/index.html">
           <div id="fridgesfamily" class="workGridArea"></div>
         </a>
-        <div id="departmentofeducation" class="workGridArea"></div>
+        <a href="../UX_UI_HW_21/workpage2/">
+          <div id="departmentofeducation" class="workGridArea"></div>
+        </a>
+        
         <div id="bookflip" class="workGridArea"></div>
     </section>
      <!-- Skill-->
