--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <a href="javascript:void(0)" class="dropbtn">Work</a>
     <div class="dropdown-content">
       <a href="#">TravelLingo</a>
-      <a href="../UI_UX_HW_19/workpage/index.html">Fridges & Family</a>
-      <a href="#">Department of Education</a>
+      <a href="../UX_UI_HW_21/workpage/">Fridges & Family</a>
+      <a href="../UX_UI_HW_21/workpage2/">Department of Education</a>
       <a href="#">Bookflip</a>
     </div>
   </li>
@@ -55,13 +55,13 @@
     </div>
     <section id="workGrid">
         <div id="travellingo" class="workGridArea"></div>
-        <a href="../UI_UX_HW_19/workpage/index.html">
+        <a href="../UX_UI_HW_21/workpage/">
           <div id="fridgesfamily" class="workGridArea"></div>
         </a>
         <a href="../UX_UI_HW_21/workpage2/">
           <div id="departmentofeducation" class="workGridArea"></div>
         </a>
-        
+
         <div id="bookflip" class="workGridArea"></div>
     </section>
      <!-- Skill-->
